Bug 154449 - .desktop file that have a "." (dot) in the filename don't work correctly in kicker menu in KDE4 RC2
Summary: .desktop file that have a "." (dot) in the filename don't work correctly in k...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-21 20:27 UTC by Guenther Hutzl
Modified: 2007-12-22 12:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Hutzl 2007-12-21 20:27:31 UTC
Version:            (using KDE KDE 3.97.0)
Installed from:    Gentoo Packages
Compiler:          gcc-4.1.2 
OS:                Linux

I am having .desktop files that have a "." dot in their filename in the "/usr/share/applications/" directory. If I try to start such an application kicker does not start the application but instead brings up the editor "KWrite" with that file opened.

Example: I have a file "/usr/share/applications/mozilla-firefox-2.0.desktop". A menu item for firefox is shown but when I try to start firefox from the menu KWrite is coming up showing the file "/usr/share/applications/mozilla-firefox-2.0.desktop".

Steps to reproduce:
1. Create a .desktop file in your applications directory that contains a "." (before the .desktop ending). You can just rename one of your existing ones.
2. Try to start the application via the kicker menu.
3. The editor KWrite should pop up.

Expected behaviour:
The application should be lauched instead of the editor.
Comment 1 Pino Toscano 2007-12-22 09:36:28 UTC
Are you using KDE 3 or KDE 4?
Because your version says "kde4", while kicker is kde3-only...
Comment 2 Guenther Hutzl 2007-12-22 11:28:47 UTC
I am using kde 3.97 which I think is the KDE4 RC2. So maybe it is not kicker if this kde-3 only. Is it called differently? What I mean is the kde menu that comes up when I click on the "K" icon in the lower left corner of the taskbar of the kde4 desktop.
Comment 3 Jason Stubbs 2007-12-22 12:41:12 UTC
SVN commit 751601 by jstubbs:

The extension starts after the last period rather than the first

BUG: 154449


 M  +1 -1      urlitemlauncher.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=751601