The extension starts after the last period rather than the first

BUG: 154449

svn path=/trunk/KDE/kdebase/workspace/; revision=751601